<resources>
    <string name="app_name">TBS Admin</string>
    <string name="student_id">Student ID</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="notification">Notification</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="title_activity_items_on_queue">Items On Queue</string>
    <string name="title_activity_queue_item_detail">Queue Item Detail</string>
    <string name="title_activity_reserved_items">Reserved Items</string>
    <string name="title_activity_donations">Donations</string>
    <string name="title_activity_donations_detail">Donations Detail</string>
    <string name="title_activity_transactions">Transactions</string>
    <string name="title_activity_dashboard">DashboardActivity</string>

    <string name="item_details">Details</string>
    <string name="category">Category: </string>

    <string name="theader_num">NO</string>
    <string name="theader_type">TYPE</string>
    <string name="theader_seller">OWNED BY</string>
    <string name="theader_buyer">RECEIVED BY</string>
    <string name="theader_date">DATE</string>
    <string name="theader_item_code">ITEM CODE</string>
    <string name="theader_total_payment">TOTAL PAYMENT</string>
    <string name="theader_user_share">USER SHARE</string>
    <string name="theader_tbs_share">TBS SHARE</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

    <!-- Dashboard -->
    <string name="menu_notifications">Notifications</string>
    <string name="menu_itemsQueue">Items on Queue</string>
    <string name="menu_reservedItems">Reserved Items</string>
    <string name="menu_rentedItems">Rented Items</string>
    <string name="menu_donations">Donations</string>
    <string name="menu_transactions">Transactions</string>
    <string name="menu_logout">Log-out</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="spinner_header">Choose a category</string>
    <string-array name="sort_by">
        <item>Date</item>
        <item>Price</item>
        <item>Name</item>
    </string-array>
    <string-array name="donate_sort_by">
        <item>Date</item>
        <item>Name</item>
    </string-array>
    <string name="title_activity_add_category">AddCategoryActivity</string>
    <string name="title_activity_reserved_detail">Reserved Item Detail</string>
    <string name="action_search">Search</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_rented_items">Rented Items</string>
    <string name="title_activity_rented_item_detail">RentedItemDetailActivity</string>
</resources>
